# fp2

./: .gitignore
labor1/aufgabe1/: CurryN.hs  Test.hs
labor1/aufgabe2/: Printf.hs  Test.hs
labor1/aufgabe3/: fpii-excercise.cabal
labor1/aufgabe3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
labor1/aufgabe3/src/: FPII.hs
labor1/aufgabe3/src/.liquid/: FPII.hs.bak  FPII.hs.cst.html  FPII.hs.err  FPII.hs.html  FPII.hs.json  FPII.hs.smt2  FPII.hs.vim.annot
labor1/aufgabe4/: FunFunDeps.hs  TypeLevelSort.hs
labor2/: Lab.lhs  Mat.hs  Nat.hs  Test.hs  Vec.hs
labor4/: Tasks.hs
labor5/: exercises-nosolutions.hs
